[IMP]theme_weche: fix odoo blog bug footer overlap read next on mobile

--- a/theme_weche/static/src/less/option_color_weche.less
+++ b/theme_weche/static/src/less/option_color_weche.less
@@ -68,27 +68,26 @@
 .nav-pills>li.active>a:hover {
     background: @color-weche-main;
 }
-
 .nav-pills>li>a:focus,
 .nav-pills>li>a:hover {
     color: white;
     background: @color-weche-main;
 }
-
-
 /*tag bg*/
 .label {
     background: @color-weche-extra;
 }
-
 .mr8,
 .mr8:focus,
-.mr8:hover
- {
+.mr8:hover {
     color: @color-weche-extra;
 }
-
-
+@media (max-width: 768px) {
+    .cover_footer_bg {
+        min-height: 280px;
+        height: 50vh;
+    }
+}
 /* Footer ----------------------------------------------------------- */
 //
 // #wrapwrap footer {
